# newsgetter

./: .gitignore  MCP_CONFIGURATION_GUIDE.md  QUICK_START.md  README.md  main.py  pyproject.toml  server.py  setup.sh
tools/: rss_tools.py
utils/: rss_reader.py
