[project]
name = "rss-digest-bot-v2"
version = "0.1.0"
description = "RSS Digest Bot - MCP Server for AI-powered RSS feed aggregation"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "feedparser>=6.0.11",
    "mcp[cli]>=1.9.4",
]

[project.optional-dependencies]
deploy = [
    "bedrock-agentcore>=1.0.0",
    "bedrock-agentcore-starter-toolkit>=1.0.0",
    "boto3>=1.26.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
